-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2026-09-24T01:32:58.692Z

CREATE TABLE "forms" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "tenant_id" integer NOT NULL,
  "title" varchar(255) NOT NULL,
  "slug" varchar(255) UNIQUE NOT NULL,
  "description" text,
  "is_active" boolean DEFAULT true,
  "start_date" timestamp,
  "end_date" timestamp,
  "form_content" jsonb NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "form_submissions" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "form_id" integer NOT NULL,
  "payload" jsonb NOT NULL,
  "submitted_at" timestamp DEFAULT (now())
);

CREATE TABLE "tenants" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) NOT NULL,
  "api_key" varchar(100) UNIQUE NOT NULL,
  "is_active" boolean DEFAULT true,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "submission_metadata" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "submission_id" integer UNIQUE NOT NULL,
  "ip_address" varchar(45),
  "user_agent" text,
  "completion_time_seconds" integer,
  "referer" text,
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "form_webhooks" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "form_id" integer NOT NULL,
  "target_url" text NOT NULL,
  "secret_token" varchar(100),
  "is_active" boolean DEFAULT true,
  "created_at" timestamp DEFAULT (now())
);

ALTER TABLE "form_submissions" ADD FOREIGN KEY ("form_id") REFERENCES "forms" ("id");

ALTER TABLE "forms" ADD FOREIGN KEY ("tenant_id") REFERENCES "tenants" ("id");

ALTER TABLE "submission_metadata" ADD FOREIGN KEY ("submission_id") REFERENCES "form_submissions" ("id");

ALTER TABLE "form_webhooks" ADD FOREIGN KEY ("form_id") REFERENCES "forms" ("id");
