// ==========================================
// FORM BUILDER & SUBMISSIONS ENGINE (DBML)
// ==========================================

// Tabela principal de formulários
Table forms {
  id integer [pk, increment]
  tenant_id integer [not null] // Tenant dono do formulário (ver Ref abaixo)
  title varchar(255) [not null] // Nome/Título identificador do formulário
  slug varchar(255) [unique, not null] // URL amigável para acesso público
  description text
  is_active boolean [default: true] // Permite ativar/desativar o formulário
  start_date timestamp // Data/hora de início da disponibilidade do formulário
  end_date timestamp // Data/hora de encerramento da disponibilidade do formulário
  form_content jsonb [not null] // Estrutura JSON com o schema das perguntas/campos
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// Tabela de submissões/respostas dos formulários
Table form_submissions {
  id integer [pk, increment]
  form_id integer [not null, ref: > forms.id]
  payload jsonb [not null] // Dados enviados pelo usuário ao responder o formulário
  submitted_at timestamp [default: `now()`]
}

// ------------------------------------------
// TABELAS AUXILIARES ÚTEIS
// ------------------------------------------

// 1. Tabela de Tenants para Suporte a Multi-tenancy
Table tenants {
  id integer [pk, increment]
  name varchar(100) [not null]
  api_key varchar(100) [unique, not null]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
}

Ref: forms.tenant_id > tenants.id

// 2. Metadados das Submissões (Rastreamento)
Table submission_metadata {
  id integer [pk, increment]
  submission_id integer [unique, not null, ref: - form_submissions.id]
  ip_address varchar(45)
  user_agent text
  completion_time_seconds integer
  referer text
  created_at timestamp [default: `now()`]
}

// 3. Webhooks para Integrações Externas
Table form_webhooks {
  id integer [pk, increment]
  form_id integer [not null, ref: > forms.id]
  target_url text [not null]
  secret_token varchar(100)
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
}